관리자 신고 페이지 페이징 이벤트 수정

--- a/src/main/resources/templates/administrator/admin_declaration.html
+++ b/src/main/resources/templates/administrator/admin_declaration.html
@@ -208,7 +208,7 @@
                 <div><h4>신고 목록</h4></div>
                 <div class="main__result-box-container">
                   <div class="main__list-rownum-box">
-                    <p>[검색결과 0건]</p>
+                    <p>[검색결과 <span>0</span>건]</p>
                     <input type="hidden" class="decl-id-store">
                     <select name="rownum" class="main__rownum-select" th:data-row="10">
                       <option value="10">10개씩 보기</option>
