--- a/src/main/resources/templates/mypage/myPageInt.html
+++ b/src/main/resources/templates/mypage/myPageInt.html
@@ -1,212 +1,207 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
-    <link rel="stylesheet" th:href="@{/css/mypage/myPageInt.css}" />
+    <link rel="stylesheet" th:href="@{/css/mypage/myPageInt.css}"/>
     <script defer th:src="@{/js/mypage/readingBook.js}"></script>
     <script defer th:src="@{/js/mypage/readingBookDeleteButton.js}"></script>
     <script defer th:src="@{/js/mypage/myPageInt.js}"></script>
-  </head>
-  <body>
-      <div>
-        <div>
-          <header>
+</head>
+<body>
+<div>
+    <div>
+        <header>
             <div class="header_layout">
-              <h1 class="header_logo">
-                <div class="header_logo_layout">
-                  <a href="">
-                    <!--홈페이지 버튼 -->
-                    <img
-                      src="../myPageImg/HippoBook_logo.png"
-                      alt=""
-                      class="header_logo_images"
-                    />
-                  </a>
+                <h1 class="header_logo">
+                    <div class="header_logo_layout">
+                        <a href="">
+                            <!--홈페이지 버튼 -->
+                            <img
+                                    src="/imgs/mypage/HippoBook_logo.png"
+                                    alt=""
+                                    class="header_logo_images"
+                            />
+                        </a>
+                    </div>
+                </h1>
+                <div class="header_right_layout">
+                    <a href="">
+                        <!-- 알람 페이지 이동  -->
+                        <img
+                                src="/imgs/mypage/alarm.png"
+                                alt=""
+                                class="header_right_alarm"
+                        />
+                    </a>
+                    <ul class="header_right_login">
+                        <a href="" class="header_right_login_box">로그인</a>
+                    </ul>
                 </div>
-              </h1>
-              <div class="header_right_layout">
-                <a href="">
-                  <!-- 알람 페이지 이동  -->
-                  <img
-                    src="../myPageImg/alarm.png"
-                    alt=""
-                    class="header_right_alarm"
-                  />
-                </a>
-                <ul class="header_right_login">
-                  <a href="" class="header_right_login_box">로그인</a>
-                </ul>
-              </div>
             </div>
-          </header>
+        </header>
 
-          <main>
+        <main>
             <div class="main_top">
-              <div class="main_top_layout">
-                <a href="">
-                  <!-- 카테고리  -->
-                  <img
-                    src="../myPageImg/Category.png"
-                    alt=""
-                    class="main_top_category"
-                  />
-                </a>
-                <div class="main_top_category_tap">
-                  <ul class="main_top_category_list">
-                    <li>
-                      <a href="">내 서재</a>
-                      <!-- 내 서재 이동 -->
-                    </li>
-                    <li>
-                      <a href="">쪽지</a>
-                      <!-- 쪽지 이동 -->
-                    </li>
-                    <li>
-                      <a href="">검색</a>
-                      <!-- 검색 이동 -->
-                    </li>
-                  </ul>
+                <div class="main_top_layout">
+                    <a href="">
+                        <!-- 카테고리  -->
+                        <img
+                                src="/imgs/mypage/Category.png"
+                                alt=""
+                                class="main_top_category"
+                        />
+                    </a>
+                    <div class="main_top_category_tap">
+                        <ul class="main_top_category_list">
+                            <li>
+                                <a href="">내 서재</a>
+                                <!-- 내 서재 이동 -->
+                            </li>
+                            <li>
+                                <a href="">쪽지</a>
+                                <!-- 쪽지 이동 -->
+                            </li>
+                            <li>
+                                <a href="">검색</a>
+                                <!-- 검색 이동 -->
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-              </div>
             </div>
-          </main>
-          <section class="profile">
+        </main>
+        <section class="profile">
             <div class="profile-all">
-              <div id="profile-photo">
-                <input
-                  type="file"
-                  id="profile-image"
-                  name="profile-photo-file"
-                  accept="image/*"
-                />
-                <img
-                  id="hippo"
-                  src="/images/mypage/free-icon-hippo-3250992.png"
-                  alt=""
-                />
-              </div>
-              <div id="profile-name">
-                <h3 th:text="${profileDto.userNickName}"></h3>
-                <span class="profile-name-option">님의 서재</span>
-              </div>
-              <div id="follow">
-                <span>팔로워 <span th:text="${profileDto.followerCnt}"></span></span>
-                <span>팔로잉 <span th:text="${profileDto.followingCnt}"></span></span>
-              </div>
+                <div id="profile-photo">
+                    <input
+                            type="file"
+                            id="profile-image"
+                            name="profile-photo-file"
+                            accept="image/*"
+                    />
+                    <img
+                            id="hippo"
+                            src="/images/mypage/free-icon-hippo-3250992.png"
+                            alt=""
+                    />
+                </div>
+                <div id="profile-name">
+                    <h3 th:text="${profileDto.userNickName}"></h3>
+                    <span class="profile-name-option">님의 서재</span>
+                </div>
+                <div id="follow">
+                    <span>팔로워 <span th:text="${profileDto.followerCnt}"></span></span>
+                    <span>팔로잉 <span th:text="${profileDto.followingCnt}"></span></span>
+                </div>
             </div>
             <div id="my-favorite-book">
-              <img src="/images/mypage/인생책 이미지.png" alt="" />
+                <img src="/images/mypage/인생책 이미지.png" alt=""/>
             </div>
-          </section>
-        </div>
-        <div>
-          <div class="mypage-cate">
+        </section>
+    </div>
+    <div>
+        <div class="mypage-cate">
             <div><a href="">소개</a></div>
             <div><a href="">책장</a></div>
             <div><a href="">내 게시물</a></div>
             <div><a href="">스티커 신청</a></div>
             <div><a href="">관리</a></div>
-          </div>
-          <div id="introduce-content">
-            
+        </div>
+        <div id="introduce-content">
+
             <div class="introduce-pencil">
-              <h3>소개글</h3>
-              <img src="/images/mypage/free-icon-pencil-1828920.png" alt="" class="introduce-content-write">
+                <h3>소개글</h3>
+                <img src="/images/mypage/free-icon-pencil-1828920.png" alt="" class="introduce-content-write">
             </div>
             <form th:action="@{/mypage/int}" method="post">
-            <div class="int-Text-Box-All">
-              <textarea th:text="${intBoardDto.intBoardContent}" name="intBoardContent" class="introduce-text-content" cols="30" rows="10" placeholder="소개글을 작성해주세요(최대100자)" maxlength="100"></textarea>
-              <button type="submit" class="introduce-save-btn">저장</button>
-            </div>
+                <div class="int-Text-Box-All">
+                    <textarea th:text="${intBoardDto.intBoardContent}" name="intBoardContent"
+                              class="introduce-text-content" cols="30" rows="10" placeholder="소개글을 작성해주세요(최대100자)"
+                              maxlength="100"></textarea>
+                    <button type="submit" class="introduce-save-btn">저장</button>
+                </div>
             </form>
-          </div>
         </div>
-        <div class="mypage-book-cate">
-          <div id="mypage-book-cate-title">
-            <h5>내책장</h5>
-          </div>
-          <div id="mypage-book-cate-img">
-            <img
-              src="/images/mypage/free-icon-add-225156.png"
-              alt=""
-              class="reading-book-plus"
-            />
+    </div>
+    <div class="mypage-book-cate">
+        <div id="mypage-book-cate-title">
+            <h5>최근 담은 책</h5>
+        </div>
+        <div id="mypage-book-cate-img">
 
-            <img
-              src="/images/mypage/free-icon-recycle-bin-11081257.png"
-              alt=""
-              class="reading-book-delete-icon"
-            />
-          </div>
+
+
         </div>
-        <div class="mybook-collection">
-          <div id="mybook-first">
-            <h5>읽고 있는 책</h5>
+    </div>
+    <div class="mybook-collection">
+        <div id="mybook-first">
+            <h5>최근 담은 책</h5>
 
             <div>
-              <span>지금 읽는 책을 담아주세요</span>
+                <span>책장에 책을 담아주세요</span>
             </div>
-          </div>
+        </div>
 
-          <div class="mybook-second">
+        <div class="mybook-second">
             <input
-              type="hidden"
-              name="readingBookDeleteCheck"
-              id="reading-book-delete-check"
+                    type="hidden"
+                    name="readingBookDeleteCheck"
+                    id="reading-book-delete-check"
             />
-            <h5>읽고 있는 책</h5>
+            <h5>최근 담은 책</h5>
             <div class="mybook-reading-select">
-              <div class="reading-book-img">
-                <img src="/images/mypage/책표지 예제.jpg" alt="" />
-              </div>
-              <div class="reading-book-infor">
-                <div id="reading-book-title">
-                  <span>제목</span>
+                <div class="reading-book-img">
+                    <img src="/images/mypage/책표지 예제.jpg" alt=""/>
                 </div>
-                <div id="reading-book-date">
-                  <span>읽기 시작한 날짜</span>
-                  <span>마지막으로 읽은 날짜</span>
+                <div class="reading-book-infor">
+                    <div id="reading-book-title">
+                        <span>제목</span>
+                    </div>
+                    <div id="reading-book-date">
+                        <span>구매한 날짜</span>
+                        <span>마지막으로 읽은 날짜</span>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
-
-          
-
         </div>
-      </div>
-      <footer>
-        <div>
-          <button id="reading-book-delete-button">삭제하기</button>
-        </div>
-      </footer>
-    <section class="reading-book-plus-modal-bg">
-      <div class="reading-book-plus-box">
+
+
+    </div>
+</div>
+<footer>
+    <div>
+        <button id="reading-book-delete-button">삭제하기</button>
+    </div>
+</footer>
+<section class="reading-book-plus-modal-bg">
+    <div class="reading-book-plus-box">
         <div class="x-box">
-          <img src="" alt="">
+            <img src="" alt="">
         </div>
         <h1>책장 전체 도서</h1>
         <form action="" class="reading-book-plus-form">
-          <div class="reading-book-plus-modal-book-img">
-            <div class="reading-book-img-check">
-              <input type="hidden" class="book-plus-check" />
-              <img src="/images/mypage/책표지 예제.jpg" alt="" />
-            </div>
-            <div class="reading-book-img-check">
-              <input type="hidden" class="book-plus-check" />
-              <img src="/images/mypage/책표지 예제.jpg" alt="" />
+            <div class="reading-book-plus-modal-book-img">
+                <div th:each="bookContainerDto : ${bookContainerList}" class="reading-book-img-check">
+
+                    <div class="my-book-get-list-image" th:data-id="${bookContainerDto.bookHasId}">
+                        <input type="hidden" class="book-plus-check"/>
+                        <img th:src="@{'/upload/' + ${bookContainerDto.fileUploadPath} + '/' + ${bookContainerDto.fileUuid} + '_' + ${bookContainerDto.fileName}}"
+                             alt="">
+                    </div>
+
+                </div>
+
+
             </div>
             <div></div>
-          </div>
-          <div></div>
 
-          <div class="reading-book-plus-button">
-            <button type="submit">추가하기</button>
-          </div>
+            <div class="reading-book-plus-button">
+                <button type="submit">추가하기</button>
+            </div>
         </form>
-      </div>
-    </section>
-  </body>
+    </div>
+</section>
+</body>
 </html>
