--- a/src/main/resources/static/css/feed/postwrite.css
+++ b/src/main/resources/static/css/feed/postwrite.css
@@ -358,14 +358,14 @@ textarea{
 }
 
 .book_modal{
-    width: 320px;
-    height: 300px;
+    width: 600px;
+    height: 500px;
     background-color: #f7f7f7;
     border-radius: 40px;
     border: 2px solid #2bc1bf;
     position: absolute;
     top: 300px;
-    left: 40%;
+    left: 35%;
      display: none;
 }
 
@@ -388,13 +388,13 @@ textarea{
 }
 
 .book_search{
-    width: 100%;
-    height: 30px;
+    width: 90%;
+    height: 60px;
     padding: 25px 0 0 20px;
 }
 
 .book_search > input{
-    width: 70%;
+    width: 80%;
     height: 30px;
 }
 
@@ -403,7 +403,7 @@ textarea{
 .book_submitBtn{
     width: 100%;
     text-align: center;
-    margin-top: 75px;
+    margin-top: 65px;
 }
 
 .book_submitBtn > button{
@@ -412,6 +412,34 @@ textarea{
     width: 80px;
     height: 32px;
     border-radius: 4px;
+}
+
+/*책 조회 표*/
+.book_selectarea{
+    padding-top: 20px;
+}
+
+.book_select{
+    border: 1px solid #8d8d8d;
+    width: 100%;
+}
+
+
+.book_select th{
+    border: 1px solid #8d8d8d;
+    top: 0px;
+}
+
+.book_select tr{
+    border: 1px solid #8d8d8d;
+}
+
+.book_select td{
+    border: 1px solid #8d8d8d;
+}
+
+.book_radioBox {
+    text-align: center;
 }
 
 
