--- a/src/main/resources/templates/user/password_reset.html
+++ b/src/main/resources/templates/user/password_reset.html
@@ -19,7 +19,7 @@
                     </button>
                 </div>
             </div>
-            <div class="login-content">
+            <form class="login-content" th:action="@{user/password_reset}" method="post">
                 <img class="logo-picture" th:src="@{/images/user/Logo.png}" width="79px">
                 <h3 class="title">비밀번호 재설정</h3>
                 <p class="sub-title">새로운 비밀번호를 설정해주세요</p>
@@ -30,12 +30,14 @@
 
                                 <div class="input">
                                 <span id="input-278-label" class="label">
-                                    비밀번호
+                                    새로운 비밀번호
                                     <sup>*</sup>
                                 </span>
                                     <input autocomplete="off" id="input-278" aria-labelledby="input-278-label"
-                                           aria-errormessage="input-278-message" type="text" placeholder="비밀번호 입력"
-                                           class="mds-input-field">
+                                           aria-errormessage="input-278-message" type="text" placeholder="새로운 비밀번호 입력"
+                                           class="mds-input-field"
+                                           name="userPassword"
+                                    >
                                 </div>
                                 <button type="button" class="mds-icon--input-delete clear-button" style="display: none;"></button>
                             </div>
@@ -50,10 +52,10 @@
                         <div class="inner">
                             <div class="input">
                 <span input-78-label class="label">
-                  비밀번호 재입력
+                  새로운 비밀번호 재입력
                   <sup>*</sup>
                 </span>
-                                <input autocomplete="off" id="input-78" aria-labelledby="input-78-label" aria-errormessage="input-78-message" type="password" placeholder="비밀번호 재입력" class="mds-input-field">
+                                <input autocomplete="off" id="input-78" aria-labelledby="input-78-label" aria-errormessage="input-78-message" type="password" placeholder="새로운 비밀번호 재입력" class="mds-input-field">
                             </div>
                         </div>
                     </label>
@@ -63,7 +65,7 @@
                         <a th:href="@{/user/login}">다음</a>
                     </button>
                 </div>
-            </div>
+            </form>
         </div>
     </section>
 </div>
