--- a/src/main/resources/templates/user/find_account.html
+++ b/src/main/resources/templates/user/find_account.html
@@ -11,39 +11,10 @@
 <div data-a-1120 id="wrap" class="web-mount">
     <section data-a-1120 class="content">
         <div data-g-1180 data-a-1120 class="login-container">
-            <form class="login-content" th:action="@{/user/register}" method="post">
+            <form class="login-content" th:action="@{/user/find_account}" method="post">
                 <img class="logo-picture" th:src="@{/images/user/Logo.png}">
                 <h3 class="title">계정 정보 찾기</h3>
                 <p class="sub-title">나만의 작은 도서관 히포북</p>
-<!--                <div class="mds-input input mds-input&#45;&#45;default mds-input&#45;&#45;required mds-input&#45;&#45;left"-->
-<!--                     style="height: 295px;">-->
-<!--                    <div class="picture-box">-->
-<!--                        <div class="inner">-->
-<!--                            <div class="image-box"></div>-->
-<!--                            <label class="picture-change-button">-->
-<!--                                <input type="file" id="file-input" accept=".jpg, .jpeg, .png, .gif, .heic">-->
-<!--                                변경-->
-<!--                            </label>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="input-item">-->
-<!--                        <div class="mds-input input mds-input&#45;&#45;default mds-input&#45;&#45;left">-->
-<!--                            <label>-->
-<!--                                <div class="inner">-->
-<!--                                    <div class="input">-->
-<!--                                                    <span id="input-245-label" class="label">-->
-<!--                                                        닉네임-->
-<!--                                                    </span>-->
-<!--                                        <input name="userNickname" autocomplete="off" id="input-245"-->
-<!--                                               aria-labelledby="input-245-label" type="text" placeholder="필명 입력"-->
-<!--                                               class="mds-input-field">-->
-<!--                                    </div>-->
-<!--                                    <button type="button" aria-label="내용 삭제" class="mds-icon&#45;&#45;input-delete clear-button"-->
-<!--                                            style></button>-->
-<!--                                </div>-->
-<!--                            </label>-->
-<!--                        </div>-->
-<!--                    </div>-->
                     <div class="input-item fade-in">
                         <div class="jumin-number">
                             <div class="one">
@@ -160,76 +131,11 @@
                     인증번호가 오지 않는다면?
                     <button type="button" class="text-button">재발송</button>
                 </p>
-                <div data-g-1180 class="input-item">
-                    <div data-g-1180 class="mds-input input mds-input--default mds-input--required mds-input--left">
-                        <label>
-                            <div class="inner">
-                                <div class="input">
-                                        <span id="input-237-label" class="label">
-                                            기존 비밀번호 입력
-                                            <sup>*</sup>
-                                        </span>
-                                    <input autocomplete="off" id="input-237" aria-labelledby="input-237-label"
-                                           aria-errormessage="input-237-messeage" type="text"
-                                           placeholder="기존 비밀번호 입력" class="mds-input-field"
-                                           name="userLoginId"
-                                    >
-                                </div>
-                                <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button"
-                                        style="display: none;"></button>
-                            </div>
-                        </label>
-                        <div class="message-wrap">
-                            <p aria-live="assertive" id="input-237-message" role="alert" class="message">8~20자 이내 영문
-                                대/소문자,숫자,특수문자만 사용 가능합니다.</p>
-                        </div>
-                    </div>
-                    <div data-g-1180 class="mds-input input mds-input--default mds-input--required mds-input-left">
-                        <label>
-                            <div class="inner">
-                                <div class="input">
-                                        <span id="input-238-label" class="label">
-                                            새로운 비밀번호 입력
-                                            <sup>*</sup>
-                                        </span>
-                                    <input autocomplete="off" id="input-238" aria-labelledby="input-238-label"
-                                           aria-errormessage="input-238-message" type="password"
-                                           placeholder="새로운 비밀번호 입력" class="mds-input-field"
-                                           name="userPassword"
-                                    >
-                                </div>
-                                <button type="button" class="secret-button">
-                                    <i class="icon-eye_off"></i>
-                                </button>
-                            </div>
-                        </label>
-                        <div class="message-wrap">
-                        </div>
-                    </div>
-                    <div data-g-1180 class="mds-input input mds-input--default mds-input--required mds-input--left">
-                        <label style="margin-top: 10px;">
-                            <div class="inner">
-                                <div class="input">
-                                    <span id="input-239-label" class="label">
-                                        비밀번호 재입력
-                                        <sup>*</sup>
-                                    </span>
-                                    <input autocomplete="off" id="input-239" aria-labelledby="input-239-label"
-                                           aria-errormessage="input-239-message" type="password"
-                                           placeholder="새로운 비밀번호 재입력" class="mds-input-field">
-                                </div>
-                                <button type="button" class="secret-button">
-                                    <i class="icon-eye_off"></i>
-                                </button>
-                            </div>
-                        </label>
-                    </div>
                     <div class="button-area mt16">
                         <button type="submit" class="next-button mds-button mds-button--primary mds-button--h56 mds-button--r4">
-                            계정 정보 수정
+                            계정 정보 찾기
                         </button>
                     </div>
-                </div>
             </form>
         </div>
     </section>
