관리자 스티커 승인 mapper 완성

--- a/src/main/resources/templates/administrator/admin_declaration.html
+++ b/src/main/resources/templates/administrator/admin_declaration.html
@@ -250,10 +250,10 @@
                         />
                       </div>
                       <div class="declaration-content-view-main">
-                        <div class="declaration-type-title-box">게시글</div>
+                        <div class="declaration-type-title-box">신고대상</div>
                         <table class="declaration-to-content-table">
                           <tr>
-                            <th>게시글명</th>
+                            <th>신고타입</th>
                             <td></td>
                           </tr>
                           <tr>
