--- a/src/main/resources/templates/administrator/admin_follow.html
+++ b/src/main/resources/templates/administrator/admin_follow.html
@@ -81,7 +81,7 @@
                         <td>
                           <input
                             type="text"
-                            name="userLoginId"
+                            name="userName"
                             class="main__userInfo-input"
                           />
                         </td>
@@ -91,28 +91,27 @@
                         <td colspan="3">
                           <input
                             type="date"
-                            name="startfollowDate"
+                            name="startFollowDate"
                             class="startDate"
                           /><span>~</span
                           ><input
                             type="date"
-                            name="endfollowDate"
+                            name="endFollowDate"
                             class="endDate"
                           />
                         </td>
                       </tr>
                       <tr>
-                        </td>
                         <th>승인</th>
                         <td class="main__followgoal-td">
                           <label>
-                            <input type="radio" name="followgoal" value="A" checked/> 전체
+                            <input type="radio" name="fPermission" value="" checked/> 전체
                           </label>
                           <label>
-                            <input type="radio" name="followgoal" value="M" /> 승인
+                            <input type="radio" name="fPermission" value="Y" /> 승인
                           </label>
                           <label>
-                            <input type="radio" name="followgoal" value="F" /> 미승인
+                            <input type="radio" name="fPermission" value="N" /> 미승인
                           </label>
                         </td>
                       </tr>
