--- a/src/main/resources/templates/mypage/myWriteContent.html
+++ b/src/main/resources/templates/mypage/myWriteContent.html
@@ -102,11 +102,11 @@
 </div>
 <div>
     <div class="mypage-cate">
-        <div><a href="">소개</a></div>
-        <div><a href="">책장</a></div>
-        <div><a href="">내 게시물</a></div>
-        <div><a href="">스티커 신청</a></div>
-        <div><a href="">관리</a></div>
+        <div><a th:href="@{/mypage/int}">소개</a></div>
+        <div><a th:href="@{/mypage/book/container}">책장</a></div>
+        <div><a th:href="@{/mypage/book/write-content}">내 게시물</a></div>
+        <div><a th:href="@{/mypage/sticker}">스티커 신청</a></div>
+        <div><a th:href="@{/mypage/manage}">관리</a></div>
     </div>
 </div>
     <section class="wirte-content-cate-line">
@@ -141,7 +141,7 @@
         <form action="">
             <div class="review-content-box-wrap">
                 <div class="review-content-box">
-                    <div class="review-content-box-title"><span>내용 입니다</span></div>
+                    <div class="review-content-box-title"><span>피드제목 입니다</span></div>
                     <div class="review-content-box-date"><span>날짜 입니다</span></div>
                     <div class="review-content-box-book-info">
                         <div class="review-content-box-book-info-image">
@@ -157,7 +157,7 @@
 
 
                 <div class="review-content-box">
-                    <div class="review-content-box-title"><span>내용 입니다</span></div>
+                    <div class="review-content-box-title"><span>피드제목 입니다</span></div>
                     <div class="review-content-box-date"><span>날짜 입니다</span></div>
                     <div class="review-content-box-book-info">
                         <div class="review-content-box-book-info-image">
@@ -172,7 +172,7 @@
                 </div>
 
                 <div class="review-content-box">
-                    <div class="review-content-box-title"><span>내용 입니다</span></div>
+                    <div class="review-content-box-title"><span>피드제목 입니다</span></div>
                     <div class="review-content-box-date"><span>날짜 입니다</span></div>
                     <div class="review-content-box-book-info">
                         <div class="review-content-box-book-info-image">
