--- a/src/main/resources/static/css/mypage/myPageInt.css
+++ b/src/main/resources/static/css/mypage/myPageInt.css
@@ -191,9 +191,14 @@ input[type="file"] {
 .mypage-cate > div {
   padding: 10px;
 }
+#best-book-img{
+  width: 150px;
+  height: 150px;
+  border: solid #96eae8;
+}
 
 #introduce-content {
-  width: 1440px;
+  width: 1340px;
   margin: 80px 230px;
   padding: 0 160px 0 160px;
   display: flex;
@@ -324,7 +329,7 @@ input[type="file"] {
   color: gray;
 }
 
-.mybook-reading-select {
+.my-recent-book {
   display: flex;
 }
 
@@ -352,45 +357,16 @@ input[type="file"] {
   align-items: flex-start;
 }
 
-.reading-book-plus {
-  cursor: pointer;
-}
 
-.reading-book-delete-icon {
-  cursor: pointer;
-}
 
-.reading-book-plus-modal-bg {
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.4);
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: none;
-  align-items: center;
-  justify-content: center;
-}
 
-.reading-book-plus-box {
-  background-color: white;
-  width: 400px;
-  height: 500px;
-  border-radius: 20px;
-  position: relative;
-}
 
-.x-box {
-  background-image: url("/images/mypage/cancel.png");
-  width: 15px;
-  height: 15px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  cursor: pointer;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-}
+
+
+
+
+
+
 
 h1 {
   margin-top: 60px;
